objects/ARF__c.object
<CustomObject>
    <fields>
        <fullName>SpecialtySalesContact__c</fullName>
        <formula>Account__r.AccountSpecialtySalesExecutive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialty Sales Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyPlanBluePriority__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specify Plan Blue Priority</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyPlanHMOSlice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specify Plan HMOSlice</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyPlanHMO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specify Plan HMO</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyPlanPOS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specify Plan POS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyPlanPPO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specify Plan PPO</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyPlansPharma__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specify Plan Pharma</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyPlans__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specify Plan(s)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SrGroupMedicareAdvWRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Group Medicare Adv w/ Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SrGroupPartDRxOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Group Part D - Rx Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SrIndivMedSupp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Note: All individual plans are FI.</inlineHelpText>
        <label>SR- Indiv Med Supp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SrIndivMedicareAdv2WRx__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Note: All individual plans are FI.</inlineHelpText>
        <label>SR- Indiv Medicare Adv w/Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SrIndivMedicareAdv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Note: All individual plans are FI.</inlineHelpText>
        <label>SR- Indiv Medicare Adv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SrIndivPartDRxOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR-Indiv Part D - Rx Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StandardGeoAccessParameters__c</fullName>
        <formula>IF( 
OR(
UseStandardDentalAccess__c,
UseStandardEapAccess__c, 
UseStandardMedicalAccess__c, 
UseStandardVisionAccess__c, 
UseStandardPharmacyAccess__c, 
UseUSRPharmacyAccess__c
),
&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard GeoAccess Parameters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopLoss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop-Loss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SupplierDiversityReqs__c</fullName>
        <inlineHelpText>Are requirements or commitments regarding Supplier Diversity included as part of this proposal?</inlineHelpText>
        <label>SupplierDiversityReqs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupplierDiversityRisk__c</fullName>
        <description>If Yes, would not meeting these requirements put this group at risk?</description>
        <label>SupplierDiversityRisk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TodayDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalOfBindersCdsCopies__c</fullName>
        <label>Total # of Binders/CDs/Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transit:</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfPlan__c</fullName>
        <label>Type of Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Sponsored</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>EyeMed Collaboration (Renewals Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeofPlan1__c</fullName>
        <label>Type of Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Sponsored</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <formula>Account__r.Underwriter__r.FirstName&amp;&quot; &quot;&amp;Account__r.Underwriter__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underwriter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UniView</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uniaccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UniAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniviewVision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UniView Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseStandardDentalAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>General Dentists (2 within 10 miles U/S; 1 within 25 miles R)
Dental Specialists (2 within 10 miles U/S; 1 within 30 miles R)</inlineHelpText>
        <label>Use Standard Dental Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseStandardEapAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1 within 10 miles U; 1 within 20 miles S; 1 within 45 miles R</inlineHelpText>
        <label>Use Standard EAP Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseStandardMedicalAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Medical Physicians (2 within 8 miles)
Acute Care Hospitals (1 within 15 miles)</inlineHelpText>
        <label>Use Standard Medical Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseStandardPharmacyAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>2 within 8 miles U</inlineHelpText>
        <label>Use Standard Pharmacy Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseStandardVisionAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1 within 10 miles U/S; 1 within 20 miles R</inlineHelpText>
        <label>Use Standard Vision Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseUSRPharmacyAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1 within 3 miles U; 1 within 5 miles S; 1 within 10 miles R</inlineHelpText>
        <label>Use U/S/R Pharmacy Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserIdPassword__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User ID/Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisionDisruptionAnalysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Disruption Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisionIncumbent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Incumbent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VivityCaOnlyMedical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vivity (CA ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VolAdAndD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vol AD&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VolLTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vol LTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VolLifeAdAndD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vol Life/AD&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VolSTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vol STD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WGS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WellPriorityWiOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Well Priority (WI Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WellpriorityCdhpWiOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Well Priority CDHP (WI Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhatAreOurStrengthsWeaknesses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What are our strengths /weaknesses (perceived or otherwise) versus the in-force and other bidding carriers?</inlineHelpText>
        <label>What are our strengths/weaknesses?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WhatIsNcnPercent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What is NCN percent?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WhatIsTheirCob__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What is their COB?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WhatIsYourStrategyForThisCase__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What is your strategy for winning this case?</inlineHelpText>
        <label>What is your strategy for this case?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WhatMethodDoesTheCustomerUse__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What method (email, tape, hardcopy, file transfer) does the customer use for eligibility files?</inlineHelpText>
        <label>What method does the customer use?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WhatServiceCenterAndClaimsOffice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What service center and claims office handle this account?</inlineHelpText>
        <label>What service center and claims office?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WhichProgramsDoesTheClientHave__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Which clinical/wellness programs does this client have in place?</inlineHelpText>
        <label>Which programs does the client have?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WiBluePreferredPos1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WI - Blue Preferred POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WiBluePreferredPos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WI - Blue Preferred POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WiBluePriority2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WI - Blue Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WiBluePriority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WI - Blue Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WinFertility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WIN Fertility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorksiteWellnessCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Worksite Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZipCodeServiceArea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zip Code Service Area</label>
        <type>Checkbox</type>
    </fields>
    <label>Action Request Form</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Request Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Request Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>